# mpsgraph-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_add_relu.rs  02_compile_matmul.rs  03_arithmetic_topk.rs  04_descriptor_compile.rs  05_concat_split.rs  06_control_flow_call.rs  07_gather_random_rnn.rs
src/: call.rs  control_flow.rs  data.rs  error.rs  execution.rs  gather.rs  graph.rs  lib.rs  ops.rs  random.rs  rnn.rs  specialized.rs  types.rs
src/ffi/: mod.rs  specialized.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AppleMPSGraphBridge/: CallOps.swift  Collections.swift  ControlFlowOps.swift  Core.swift  Device.swift  Execution.swift  GatherOps.swift  Graph.swift  MathOps.swift  RNNOps.swift  RandomOps.swift  ShapeOps.swift  SpecializedDescriptors.swift  SpecializedOps.swift  TensorData.swift  Types.swift
swift-bridge/Sources/AppleMPSGraphBridge/include/: module.modulemap
tests/: advanced_ops_tests.rs  metadata_tests.rs  ops_tests.rs  specialized_tests.rs
