[package]
name = "apple-mpsgraph"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/mpsgraph-rs"
repository = "https://github.com/doom-fish/mpsgraph-rs"
description = "Safe Rust bindings for Apple's MetalPerformanceShadersGraph framework on macOS, backed by a Swift bridge"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["mpsgraph", "metal", "graph", "ml", "apple"]
categories = ["api-bindings", "os::macos-apis", "graphics"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "COVERAGE.md",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "apple_mpsgraph"
crate-type = ["lib"]

[dependencies]
apple-metal = "0.5.1"

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"

[[example]]
name = "01_add_relu"

[[example]]
name = "02_compile_matmul"

[[example]]
name = "03_arithmetic_topk"

[[example]]
name = "04_descriptor_compile"

[[example]]
name = "05_concat_split"
